--- a/search/templates/search/includes/_column-image.html
+++ b/search/templates/search/includes/_column-image.html
@@ -1,3 +1,3 @@
 <div class="max-w-24">
-  {% component "profile_image" obj=record image_field="image_profile_small" / %}
+  {% component "profile_image" record.image_profile_small record.image_width record.image_height / %}
 </div>
