--- a/core/components/post/post.html
+++ b/core/components/post/post.html
@@ -3,7 +3,7 @@
 
 <article class="grid grid-cols-7 gap-4 my-4">
   <div class="col-span-1">
-    {% component "profile_image" obj=created_by image_field="image_profile_small" / %}
+    {% component "profile_image" created_by.image_profile_small created_by.image_width created_by.image_height / %}
   </div>
 
   <div class="col-span-6">
