feat: Implement message of the day

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,6 +27,8 @@
               {% login_form %}
             </form>
           {% endblock %}
+
+          {% component "motd" / %}
         </aside>
         <div class="col-span-10">
           <header>
