--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,7 @@
 <html lang="de" class="{% if request.user.is_authenticated %}{{ request.user.appearance_size }}{% else %}size-base{% endif %}">
   <head>
     <meta charset="utf-8" />
-    <title>GeheimVZ</title>
+    <title>geheimVZ</title>
     <meta name="viewport" content="width=768" />
 
     {% vite_hmr_client %}
