feat(index): Add friend suggestions and popular groups

--- a/core/assets/main.css
+++ b/core/assets/main.css
@@ -56,7 +56,8 @@ a {
   @apply text-lg font-bold border-b border-primary-200;
 }
 
-.mixed-copy p {
+.mixed-copy p,
+.mixed-copy ul {
   @apply my-4;
 }
 
