--- a/friends/templates/friends/includes/_column-friend.html
+++ b/friends/templates/friends/includes/_column-friend.html
@@ -3,7 +3,7 @@
 
 <div class="flex gap-4">
   <div class="w-32">
-    {% component "profile_image" value.image_profile_small value.image_width value.image_height / %}
+    {% component "profile_image" value.profile.image_profile_small value.profile.image_width value.profile.image_height / %}
   </div>
   <dl>
     <div class="grid grid-cols-3 gap-4">
