--- a/friends/templates/friends/includes/_column-suggestion.html
+++ b/friends/templates/friends/includes/_column-suggestion.html
@@ -2,7 +2,7 @@
 
 <div class="flex gap-4">
   <div class="w-32">
-    {% component "profile_image" record.image_profile_small record.image_width record.image_height / %}
+    {% component "profile_image" record.profile.image_profile_small record.profile.image_width record.profile.image_height / %}
   </div>
   <dl>
     <div class="grid grid-cols-3 gap-4">
