--- a/friends/templates/friends/includes/_column-friend-request-actions.html
+++ b/friends/templates/friends/includes/_column-friend-request-actions.html
@@ -14,7 +14,7 @@
       <button type="submit" class="action">{% translate 'Reject friend request' %}</button>
     </form>
   </li>
-  <li><a class="action" href="{% url 'profile' from.pk %}">{% blocktranslate with name=from.display_name %}{{ name }}'s page{% endblocktranslate %}</a></li>
+  <li><a class="action" href="{% url 'profile' from.pk %}">{% blocktranslate with name=from.display_name %}<span dir="auto">{{ name }}</span>'s page{% endblocktranslate %}</a></li>
   <li><a class="action" href="{% url 'message_create_to' from.pk %}">{% translate 'Send message' %}</a></li>
 </ul>
 {% endwith %}
