--- a/groups/templates/groups/group_form.html
+++ b/groups/templates/groups/group_form.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block headertitle %}
-{% blocktranslate with name=object.name %}Edit group {{ name }}{% endblocktranslate %}
+{% blocktranslate with name=object.name %}Edit group <span dir="auto">{{ name }}</span>{% endblocktranslate %}
 {% endblock %}
 
 {% block content %}
