--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -12,9 +12,9 @@
 <p class="mb-4">{% blocktranslate count count=page_obj.paginator.count %}You are in one group{% plural %}You are in {{ count }} groups.{% endblocktranslate %}</p>
 
 {% if page_obj.paginator.count > 0 %}
-<ul class="mb-4 list-disc list-inside text-primary-accent">
+<ul class="px-5 mb-4 list-disc text-primary-accent">
   {% for group in page_obj %}
-    <li><a href="{% url 'group' group.pk %}">{{ group.name }}</a></li>
+    <li><a class="block text-contain" href="{% url 'group' group.pk %}">{{ group.name }}</a></li>
   {% endfor %}
 </ul>
 
