--- a/groups/templates/groups/group_list_all.html
+++ b/groups/templates/groups/group_list_all.html
@@ -9,9 +9,9 @@
 {% block content %}
 {% component "tabs" tabs=tabs / %}
 
-<ul class="mb-4 list-disc list-inside text-primary-accent">
+<ul class="px-5 mb-4 list-disc text-primary-accent">
   {% for group in page_obj %}
-    <li><a href="{% url 'group' group.pk %}">{{ group.name }}</a></li>
+    <li><a class="block text-contain" href="{% url 'group' group.pk %}">{{ group.name }}</a></li>
   {% endfor %}
 </ul>
 
