--- a/private_messages/templates/private_messages/privatemessage_detail.html
+++ b/private_messages/templates/private_messages/privatemessage_detail.html
@@ -5,7 +5,7 @@
 
 {% block headertitle %}
 {% blocktranslate with name=object.from_user.display_name trimmed %}
-Message from {{ name }}
+Message from <span dir="auto">{{ name }}</span>
 {% endblocktranslate %}
 {% endblock %}
 
