--- a/core/components/post/post.html
+++ b/core/components/post/post.html
@@ -8,10 +8,10 @@
 
   <div class="col-span-6">
     <header class="px-2 py-1 border-y border-neutral-300 bg-neutral-200 text-neutral-content">
-      <div>
+      <div class="overflow-hidden">
         {% url 'profile' created_by.id as href %}
         {% blocktranslate with href=href name=created_by.display_name trimmed %}
-          <a class="font-bold" href="{{ href }}">{{ name }}</a> has written
+          <a class="font-bold text-contain" href="{{ href }}">{{ name }}</a> has written
         {% endblocktranslate %}
       </div>
       <div class="text-sm">{% blocktranslate with created_at=created_at %}At {{ created_at }}{% endblocktranslate %}</div>
