--- a/friends/templates/friends/includes/_column-friend.html
+++ b/friends/templates/friends/includes/_column-friend.html
@@ -8,7 +8,7 @@
   <dl>
     <div class="grid grid-cols-3 gap-4">
       <dt class="col-span-1 text-base-accent">{% translate 'Name' %}:</dt>
-      <dd class="col-span-2"><a href="{% url 'profile' value.id %}">{{ value.display_name }}</a></dd>
+      <dd class="col-span-2 text-contain"><a href="{% url 'profile' value.id %}">{{ value.display_name }}</a></dd>
     </div>
 
     {% if show_created %}
