--- a/groups/templates/groups/group_invite.html
+++ b/groups/templates/groups/group_invite.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block headertitle %}
-{% blocktranslate with name=group.name %}Invite to group "{{ name }}"{% endblocktranslate %}
+{% blocktranslate with name=group.name %}Invite to group <span dir="auto">{{ name }}</span>{% endblocktranslate %}
 {% endblock %}
 
 {% block content %}
